test(dpor): fix fixture to isolate recorded-PC dependency
Remove  from test step read/write sets so WriteBStep and ReadAStep
only overlap on their respective locations (b and a). This ensures the
wakeUp test actually validates recorded-PC fallback: WriteBStep (PC 1)
and ReadAStep are now independent, so wakeUp must correctly use the
recorded PC=0 (WriteAStep) to wake T1.

Co-Authored-By: Claude <noreply@anthropic.com>